# resurrection-capsule

./: .gitignore  .gitmodules  .travis.yml  CODE_OF_CONDUCT.md  Darkspore EULA  Dockerfile  HOW_I_RUN_IT.md  LEGAL.md  README.md  build-docker-42127.sh  build-docker-5431.sh  build-docker-80.sh  build-docker-blaze.bat  build-docker-blaze.sh  build-docker.bat  build-docker.sh  build-exe-docker.bat  build-exe-docker.sh  build-launcher-docker.sh  kill-docker.sh  rebuild-exe.sh  rebuild-launcher.sh  restart-docker.sh  restart-server.sh  sporenet-logs.ps1  sporenet-logs.sh  travis-test.sh
build_exe/: Dockerfile  (+3 more)
server/libs/raknet-3.902-mod/: 2.x_to_3.x_upgrade.txt  CMakeLists.txt  Doxyfile  License.txt  RakNet.cbp  RakNet.dev  RakNet_VS2003.sln  RakNet_VS2005.sln  readme.txt
server/libs/raknet-3.902-mod/CmakeIncludes/: CmakeMacros.txt
server/libs/raknet-3.902-mod/DependentExtensions/: CMakeLists.txt  RakVoice.cpp  RakVoice.h
server/libs/raknet-3.902-mod/DependentExtensions/Autopatcher/: AutopatcherClient.cpp  AutopatcherClient.h  AutopatcherServer.cpp  AutopatcherServer.h  CreatePatch.cpp
server/libs/raknet-3.902-mod/DependentExtensions/Autopatcher/AutopatcherMySQLRepository/: AutopatcherMySQLRepository.cpp  AutopatcherMySQLRepository.h  AutopatcherMySQLRepository.vcproj
server/libs/raknet-3.902-mod/DependentExtensions/Autopatcher/AutopatcherPostgreRepository/: AutopatcherPostgreRepository.cpp  AutopatcherPostgreRepository.h  AutopatcherPostgreRepository.vcproj  AutopatcherPostgreRepository_vc8.vcproj
server/libs/raknet-3.902-mod/DependentExtensions/GFx3/: FxGameDelegate.cpp  FxGameDelegate.h
server/libs/raknet-3.902-mod/DependentExtensions/IrrlichtDemo/: CDemo.cpp  CDemo.h  CMainMenu.cpp  CMainMenu.h  Irrlicht.exp  Irrlicht.lib  IrrlichtDemo.v8.vcproj  RakNetStuff.cpp  RakNetStuff.h  main.cpp  readme.txt
server/libs/raknet-3.902-mod/DependentExtensions/Lobby/: LobbyClientInterface.cpp  LobbyClientInterface.h  LobbyClientPC.cpp  LobbyClientPC.h  LobbyDBSpec.cpp  LobbyDBSpec.h  LobbyPCCommon.cpp  LobbyPCCommon.h  LobbyPCTypes.h  LobbyServer.cpp  LobbyServer.h  LobbyTypes.cpp  LobbyTypes.h  RankingServerDBSpec.cpp  RankingServerDBSpec.h  STDStringCompressor.cpp  STDStringCompressor.h  TitleValidationDBSpec.cpp  TitleValidationDBSpec.h
server/libs/raknet-3.902-mod/DependentExtensions/Lobby/LobbyDB_PostgreRepository/: LobbyDB_PostgreSQL.cpp  LobbyDB_PostgreSQL.h  LobbyDB_PostgreSQL_vc8.vcproj  readme.txt
server/libs/raknet-3.902-mod/DependentExtensions/Lobby/LobbyServer_PostgreSQL/: LobbyServer_PostgreSQL.cpp  LobbyServer_PostgreSQL.h
server/libs/raknet-3.902-mod/DependentExtensions/Lobby/RankingServerDB_PostgreRepository/: Elo.cpp  Elo.h  RankingServerDB_PostgreSQL_vc8.vcproj  RankingServer_PostgreSQL.cpp  RankingServer_PostgreSQL.h  readme.txt
server/libs/raknet-3.902-mod/DependentExtensions/Lobby2/: Lobby2Client.cpp  Lobby2Client.h  Lobby2Message.cpp  Lobby2Message.h  Lobby2Plugin.cpp  Lobby2Plugin.h  Lobby2Presence.cpp  Lobby2Presence.h  Lobby2ResultCode.cpp  Lobby2ResultCode.h  Lobby2Server.cpp  Lobby2Server.h
server/libs/raknet-3.902-mod/DependentExtensions/MySQLInterface/: MySQLInterface.cpp  MySQLInterface.h
server/libs/raknet-3.902-mod/DependentExtensions/Ogre3DInterpDemo/: App3D.cpp  App3D.h  AppInterface.cpp  AppInterface.h  AppTypes.h  FSM.cpp  FSM.h  Ogre3DInterpDemo.vcproj  OverlayHelper.cpp  OverlayHelper.h  RunnableState.h  State.cpp  State.h  TransformationHistory.cpp  TransformationHistory.h  WinMain.cpp
server/libs/raknet-3.902-mod/DependentExtensions/PatchTest/: PatchTest.vcproj  PatchTest_vc8.vcproj  main.cpp
server/libs/raknet-3.902-mod/DependentExtensions/PostgreSQLInterface/: PostgreSQLInterface.cpp  PostgreSQLInterface.h
server/libs/raknet-3.902-mod/DependentExtensions/RPC3/: RPC3.cpp  RPC3.h  RPC3_Boost.h
server/libs/raknet-3.902-mod/DependentExtensions/SQLImageBuffer/: SQLImageBuffer.vcproj  main.cpp
server/libs/raknet-3.902-mod/DependentExtensions/SQLite3Plugin/: SQLite3ClientPlugin.cpp  SQLite3ClientPlugin.h  SQLite3Plugin.vcproj  SQLite3PluginCommon.cpp  SQLite3PluginCommon.h  SQLite3Sample.cpp  SQLite3ServerPlugin.cpp  SQLite3ServerPlugin.h
server/libs/raknet-3.902-mod/DependentExtensions/UPNP/: UPNPNATInternal.cpp  UPNPNATInternal.h  UPNPPortForwarder.cpp  UPNPPortForwarder.h
server/libs/raknet-3.902-mod/DependentExtensions/bzip2-1.0.3/: CMakeLists.txt
server/libs/raknet-3.902-mod/DependentExtensions/openssl-0.9.8g/: libeay32.lib  ssleay32.lib
server/libs/raknet-3.902-mod/Source/: AsynchronousFileIO.h  AutoRPC.cpp  AutoRPC.h  AutopatcherPatchContext.h  AutopatcherRepositoryInterface.h  BigInt.cpp  BigInt.h  BitStream.cpp  BitStream.h  BitStream_NoTemplate.cpp  BitStream_NoTemplate.h  CCRakNetSlidingWindow.cpp  CCRakNetSlidingWindow.h  CCRakNetUDT.cpp  CCRakNetUDT.h  CheckSum.h  ClientContextStruct.h  CommandParserInterface.cpp  CommandParserInterface.h  ConnectionGraph.cpp  ConnectionGraph.h  ConnectionGraph2.cpp  ConnectionGraph2.h  ConsoleServer.cpp  ConsoleServer.h  DS_BPlusTree.h  DS_BinarySearchTree.h  DS_BytePool.cpp  DS_BytePool.h  DS_ByteQueue.cpp  DS_ByteQueue.h  DS_Heap.h  DS_HuffmanEncodingTree.cpp  DS_HuffmanEncodingTree.h  DS_HuffmanEncodingTreeFactory.h  DS_LinkedList.h  DS_List.h  DS_Map.h  DS_MemoryPool.h  DS_Multilist.h  (+202 more)
(+336 files in other folders)
