cmake_minimum_required(VERSION 2.6)
add_subdirectory("bzip2-1.0.3")
add_subdirectory("UPNP")
add_subdirectory("XML")
IF(USEMYSQL AND NOT DISABLEDEPENDENCIES) 
	add_subdirectory(MySQLInterface)
ENDIF(USEMYSQL AND NOT DISABLEDEPENDENCIES) 
IF(USEPOSTGRESQL AND NOT DISABLEDEPENDENCIES) 
	add_subdirectory(PostgreSQLInterface)
ENDIF(USEPOSTGRESQL AND NOT DISABLEDEPENDENCIES) 
add_subdirectory(Autopatcher)
IF (WIN32 AND NOT UNIX)
	add_subdirectory(portaudio_v18_1)
	add_subdirectory(speex-1.1.12)
ENDIF(WIN32 AND NOT UNIX)
IF(USEBOOST AND NOT DISABLEDEPENDENCIES) 
	add_subdirectory(RPC3)
ENDIF(USEBOOST AND NOT DISABLEDEPENDENCIES) 
IF(NOT WIN32 AND UNIX)
	IF(USESPEEX AND NOT DISABLEDEPENDENCIES) 
		FINDSPEEX()
		include_directories(${RAKNETHEADERFILES} ${SPEEX_INCLUDE_DIRS})
		add_library(LibRakVoice STATIC RakVoice.h RakVoice.cpp)
		target_link_libraries(LibRakVoice ${RAKNET_COMMON_LIBS} ${SPEEX_LIBRARIES})
	ENDIF(USESPEEX AND NOT DISABLEDEPENDENCIES) 
ENDIF(NOT WIN32 AND UNIX)
IF(USEIRRLICHT AND USEIRRKLANG AND NOT DISABLEDEPENDENCIES) 
	add_subdirectory(IrrlichtDemo)
ENDIF(USEIRRLICHT AND USEIRRKLANG AND NOT DISABLEDEPENDENCIES)
IF(USEOGRE3D AND NOT DISABLEDEPENDENCIES) 
	add_subdirectory(Ogre3DInterpDemo)
ENDIF(USEOGRE3D AND NOT DISABLEDEPENDENCIES)





